# servo-skull

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: providers.toml
demo/: README.md
demo/codex/: domain-codex.md
demo/input/: sample-spec.md
deploy/: deploy.sh  servo-skull-webhook.service  servo-skull-worker.service  webhook_receiver.py
src/servo_skull/: __init__.py  _cli.py  _prompts.py  _utils.py  deep_research.py  document_router.py  extractor.py  grounder.py  llm_client.py  llm_providers.py  markdown_builder.py  mlx_provider.py  models.py  pii_vault.py  rag_indexer.py  rules_extractor.py  security_checker.py  spool_coordinator.py  sync.py  task_router.py
tests/: conftest.py  test_cli.py  test_deep_research.py  test_document_router.py  test_extractor.py  test_grounder.py  test_llm_client.py  test_llm_providers.py  test_markdown_builder.py  test_mlx_provider.py  test_models.py  test_pii_vault.py  test_prompts.py  test_rag_indexer.py  test_rules_extractor.py  test_security_checker.py  test_spool_coordinator.py  test_task_router.py  test_utils.py
